--- a/development/dkms/Makefile_mktemp.diff
+++ b/development/dkms/Makefile_mktemp.diff
@@ -1,6 +1,6 @@
---- Makefile.orig	2012-11-03 21:13:55.065215509 +0100
-+++ Makefile	2012-11-03 21:14:13.244222002 +0100
-@@ -90,7 +90,7 @@
+--- Makefile.orig	2018-04-26 01:56:48.000000000 +1000
++++ Makefile	2018-07-09 23:29:27.236000000 +1000
+@@ -97,7 +97,7 @@
  
  $(TARBALL):
  	mkdir -p $(deb_destdir)
@@ -9,16 +9,16 @@
  	cp -a ../$(RELEASE_NAME) $${tmp_dir}/$(RELEASE_STRING) ; \
  	sed -e "s/\[INSERT_VERSION_HERE\]/$(RELEASE_VERSION)/" dkms > $${tmp_dir}/$(RELEASE_STRING)/dkms ; \
  	sed -e "s/\[INSERT_VERSION_HERE\]/$(RELEASE_VERSION)/" dkms.spec > $${tmp_dir}/$(RELEASE_STRING)/dkms.spec ; \
-@@ -107,7 +107,7 @@
+@@ -114,7 +114,7 @@
  
  
  rpm: $(TARBALL) dkms.spec
 -	tmp_dir=`mktemp -d --tmpdir dkms.XXXXXXXX` ; \
 +	tmp_dir=`mktemp -d -t dkms.XXXXXXXX` ; \
+ 	echo $(tmp_dir); \
  	mkdir -p $${tmp_dir}/{BUILD,RPMS,SRPMS,SPECS,SOURCES} ; \
  	cp $(TARBALL) $${tmp_dir}/SOURCES ; \
- 	sed "s/\[INSERT_VERSION_HERE\]/$(RELEASE_VERSION)/" dkms.spec > $${tmp_dir}/SPECS/dkms.spec ; \
-@@ -131,7 +131,7 @@
+@@ -139,7 +139,7 @@
  	cd -
  
  debs:
